<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/popular"
        android:enabled="true"
        android:title="@string/popular"
        android:icon="@drawable/ic_launcher_background"
        />
    <item
        android:id="@+id/upcoming"
        android:enabled="true"
        android:title="@string/upcoming"
        android:icon="@drawable/ic_launcher_background"
        />

    <item
        android:id="@+id/now_playing"
        android:enabled="true"
        android:title="@string/now_playing"
        android:icon="@drawable/ic_launcher_background"
        />
    <item
        android:id="@+id/top_rated"
        android:enabled="true"
        android:title="@string/top_rated"
        android:icon="@drawable/ic_launcher_background"
        />

</menu>