<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_centerHorizontal="true"
                android:id="@+id/movie_photo"
                android:contentDescription="@string/movie_image"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_below="@+id/movie_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/movie_title"
                android:layout_margin="5dp"
                android:textSize="20sp"
                android:text="@string/title"
                android:textColor="@color/cardview_dark_background"/>

            <TextView
                android:layout_below="@+id/movie_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/movie_overview"
                android:layout_margin="5dp"
                android:text="@string/overview"
                android:textColor="@color/cardview_dark_background"
                android:textSize="20sp"/>

            <TextView
                android:layout_below="@+id/movie_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/movie_rating"
                android:textSize="20sp"
                android:layout_margin="5dp"
                android:text="@string/rating"
                android:textColor="@color/cardview_dark_background"/>


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>