<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/movie_title"
        android:layout_margin="5dp"
        android:textSize="25sp"
        android:text="@string/title"
        android:textColor="@color/cardview_dark_background"
        android:layout_centerHorizontal="true"
        android:textStyle="bold|italic"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/movie_title"
        android:id="@+id/movie_release_date"
        android:textSize="20sp"
        android:layout_margin="5dp"
        android:text="@string/release_date"
        android:textColor="@color/cardview_dark_background"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/movie_release_date"
        android:id="@+id/movie_votes"
        android:textSize="20sp"
        android:layout_margin="5dp"
        android:text="@string/votes"
        android:textColor="@color/cardview_dark_background"
        />


</RelativeLayout>